Fixed problem on the front page. When long text would break the walking for water box.

--- a/akvo/mediaroot/css/global.css
+++ b/akvo/mediaroot/css/global.css
@@ -579,6 +579,11 @@ th { font-weight: bold; }
     width:345px;
 }
 
+#ww_sponser_box{
+    float:left; 
+    width:345px;
+    }
+
 .index_sponsor_box_left {
     float:left; 
     width:90px;
